alignment issues corrected

--- a/src/components/style/CityComponent.css
+++ b/src/components/style/CityComponent.css
@@ -6,7 +6,8 @@
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: none;
   padding: 20px;
 }
 
@@ -15,16 +16,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 
-  padding: 20px;
+  
   background-color: #f2f2f2;
-  min-width: 35%;
+  /* min-width: 35%; */
 
 
 }
 
 .weather-app-body {
     display: flex;
+    /* min-width: 35%; */
+    width: 100%;
   }
 
 .weather-app-body-left {
@@ -36,6 +40,9 @@
   padding: 20px;
   background-color: #2e2c2c;
   color: #fff;
+  /* min-width: 35%; */
+  
+  
 }
 
 .vl {
